lab2/service-1.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-deploy
spec:
  selector:
    matchLabels:
      app: service-1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: service-1
        image: la7rodectus/service_1
        ports:
        - containerPort: 8080
