lab2/config.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/service-1
        pathType: Prefix
        backend:
          service:
            name: service-1-service
            port:
              number: 8080
      - path: /api/service-2
        pathType: Prefix
        backend:
          service:
            name: service-2-service
            port:
              number: 8080
